# monorepo-python-case

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  requirements.in  requirements_linux_lock.txt  requirements_lock.txt
services/pdf2text/: BUILD.bazel  main.py  pdf2text_pb2.py  pdf2text_pb2_grpc.py
